# xmi-schema-python

./: .coverage  .gitignore  CLAUDE.md  COVERAGE.md  FEATURE_PARITY_GAMEPLAN.md  MIGRATION_NOTES.md  PLAN.md  README.md  TEST_INTEGRATION_SUMMARY.md  pyproject.toml
.github/workflows/: pr-validation.yml  python-publish.yml
benchmarks/: phase8_benchmark_suite.py
docs/analysis/: full_model_test_1_gap_analysis.md  physical_entity_property_mapping.md
docs/entities/: XmiBeam.md  XmiColumn.md  XmiSlab.md  XmiWall.md
docs/performance/: phase8_benchmarking.md
docs/relationships/: XmiHasStructuralCurveMember.md
src/xmi/: __init__.py
src/xmi/v1/: xmi_manager.py
src/xmi/v1/entities/: xmi_material.py  xmi_structural_cross_section.py  xmi_structural_curve_member.py
src/xmi/v1/enums/: __init__.py  xmi_material_enums.py
src/xmi/v1/geometries/: xmi_arc_3d.py  xmi_base_geometry.py
src/xmi/v1/relationships/: __init__.py  xmi_has_structural_cross_section.py  xmi_has_structural_material.py
src/xmi/v2/: xmi_model.py
src/xmi/v2/utils/: xmi_entity_type_mapping.py  xmi_unit_conversion.py  xmi_utilities.py
tests/xmi/v1/test_geometries/: __init__.py  test_xmi_arc_3d.py
tests/xmi/v1/test_relationships/: __init__.py  test_xmi_has_line_3d.py
tests/xmi/v1/test_scripts/: test_xmi_manager_v1.py  test_xmi_structural_cross_section.py
tests/xmi/v2/test_entities/: test_xmi_base_physical_entity.py  test_xmi_base_structural_analytical_entity.py  test_xmi_beam.py  test_xmi_column.py  test_xmi_cross_section.py  test_xmi_material.py  test_xmi_segment.py  test_xmi_slab.py  (+10 more)
(+180 files in other folders)
