[project]
name = "xmi"
version = "0.4.0"
description = "Used to interpret XMI Schema"
authors = [
    {name = "darellchua", email = "darellchua2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["xmi", "schema", "structural", "engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["pydantic (>=2.12.5,<3.0.0)"]

[project.urls]
Homepage = "https://github.com/darellchua2/xmi-schema"
Repository = "https://github.com/darellchua2/xmi-schema"
Documentation = "https://github.com/darellchua2/xmi-schema"
"Bug Tracker" = "https://github.com/darellchua2/xmi-schema/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "xmi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
